--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,10 @@ Supermergekit/
 Text_Generation/
 venv_image_generation/
 venv_text_generation/
+AutoGPT/
+gptme/
+AgentK/
+self-hosted-ai-starter-kit/
+lerobot/
+torchchat/
+distributed-llama/
